<resources>
    <string name="app_name">Landmark Manager</string>
    <string name="settings">Settings</string>
    <string name="zoomin">Zoom in</string>
    <string name="zoomout">Zoom out</string>
    <string name="blogeo">Send post to Blogeo</string>
    <string name="trackPos">Record my route</string>
    <string name="login">Login</string>
    <string name="socialNetworks">Social login</string>
    <string name="friendsCheckins">Social activities</string>
    <string name="addLandmark">Add landmark</string>
    <string name="addLayer">Add layer</string>
    <string name="refreshLayers">Refresh layers</string>
    <string name="enableLayers">Enable all layers</string>
    <string name="disableLayers">Disable all layers</string>
    <string name="showLayers">Show layers</string>
    <string name="saveRoute">Save route</string>
    <string name="routes">Routes</string>
    <string name="loadRoute">Load route from file</string>
    <string name="loadPoiFile">Poi files</string>
    <string name="clearMap">Clear map</string>
    <string name="showMyPos">My location</string>
    <string name="events">Calendar</string>
    <string name="showMyLandmarks">Saved landmarks</string>
    <string name="recentLandmarks">Recently opened</string>
    <string name="landmarks">My landmarks</string>
    <string name="landmarksNearby">Nearby landmarks</string>
    <string name="dataPacket">Data packets</string>
    <string name="checkin">Check-in</string>
    <string name="qrcheckin">Check-in with QR code</string>
    <string name="searchcheckin">Check-in at GMS World location</string>
    <string name="autocheckin">Auto Check-In</string>
    <string name="search">Search</string>
    <string name="pickMyPos">Search location</string>
    <string name="discoverPlaces">Discover new places nearby</string>
    <string name="releaseNotes">Release notes</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="more">More…</string>
    <string name="register">Register to GMS World</string>
    <string name="deals">Deals</string>
    <string name="mapMode">Map</string>
    <string name="listMode">List</string>
    <string name="newestLandmarks">Newest landmarks</string>
    <string name="rateUs">Rate us</string>
    <string name="imageLoading">Image download</string>
    <string name="shareScreenshot">Share screenshot</string>
    <string name="reset">Reset to default settings</string>
    <string name="config">Configuration</string>
    <string name="mapProvider">Map provider</string>
    <string name="locale">Locale</string>
    <string name="logLevel">Log level</string>
    <string name="landmarkPersist">Landmark persistence</string>
    <string name="layers">Layers</string>
    <string name="persistMgr">Persistence Manager</string>
    <string name="tileCache">Tile caching</string>
    <string name="mapLoad">Map loading</string>
    <string name="googleMaps">Google Maps</string>
    <string name="osmMaps">Open Street Maps</string>
    <string name="unitOfLength">Unit of length</string>
    <string name="landmarksPerLayer">Landmarks in layer</string>
    <string name="radius">Search radius</string>
    <string name="dealLimit">Deals in layer</string>
    <string name="clearCache">Clear map cache</string>
    <string name="routeType">Routes type</string>
    <string name="searchType">Search type</string>
    <string name="autoCheckinTitle">Auto Check-In</string>
    <string name="autoCheckinSummaryOn">Click to disable Auto Check-In</string>
    <string name="autoCheckinSummaryOff">Click to enable Auto Check-In</string>
    <string name="trackUserTitle">User tracking</string>
    <string name="trackUserSummaryOn">Click to disable user tracking</string>
    <string name="trackUserSummaryOff">Click to enable user tracking</string>
    <string name="devModeTitle">Developer mode</string>
    <string name="devModeSummaryOn">Click to disable developer mode</string>
    <string name="devModeSummaryOff">Click to enable developer mode</string>
    <string name="select">Select option</string>
    <string name="select.value">Select value</string>
    <string name="enable">Enable or disable layer</string>
    <string name="summary">Click to pop up a list to choose from</string>
    <string name="confirmDealPreferences">Deal recommendations cleared!</string>
    <string name="addButton">Add</string>
    <string name="descLabel">Description</string>
    <string name="categoryLabel">Category</string>
    <string name="keywordsLabel">Keywords</string>
    <string name="keywordsHint">Enter keywords comma separated. Layer name will be included to keywords by default.</string>
    <string name="cancelButton">Cancel</string>
    <string name="nameLabel">Name</string>
    <string name="okButton">OK</string>
    <string name="addVenue">Create venue in Foursquare</string>
    <string name="pickCategory">Pick Foursquare venue category</string>
    <string name="venueCreated.success">Venue created in Foursquare successfully!</string>
    <string name="venueCreated.failed">Error creating venue in Foursquare: %1$s</string>
    <string name="Venue.exists.error">Venue already exists!</string>
    <string name="layerCreated">Layer created!</string>
    <string name="Layer.name.empty.error">Layer name can\'t be empty!</string>
    <string name="Layer.exists.error">Layer already exists! Choose different name.</string>
    <string name="Layer.creating.dynamic">Creating dynamic layer &amp;lt;b&amp;&amp;gt;%1$s&amp;&amp;lt;/b&amp;&amp;gt;...</string>
    <string name="validityLabel">Validity Time</string>
    <string name="sendButton">Send</string>
    <string name="closingText">Closing Landmark Manager…</string>
    <string name="loadingText">Loading Landmark Manager…</string>
    <string name="passwordLabel">Password</string>
    <string name="loginButton">Login</string>
    <string name="loginLabel">Login</string>
    <string name="loginFull">You are logged in to all available services!</string>
    <string name="country_prompt">Select your country</string>
    <string name="pickButton">Search</string>
    <string name="countryLabel">Country</string>
    <string name="addressLabel">City or place</string>
    <string name="Pick.location.default">Loading default location %1$s…\nIn order to search for other locations go to Menu-&amp;&amp;gt;Search location.</string>
    <string name="Action.canceled">Location search cancelled!</string>
    <string name="commentTitle">Enter your comment</string>
    <string name="commentLabel">Your comment:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="comment">Comment</string>
    <string name="call">Call</string>
    <string name="listSelection">Select landmark</string>
    <string name="listLocations">Select location</string>
    <string name="foundLandmarksLow">
         If you want to improve search results go to Menu -&amp;&amp;gt; Settings -&amp;&amp;gt; Search type
     </string>
    <string name="foundDealsLow">
         If you want to improve search results go to Menu -&amp;&amp;gt; Settings -&amp;&amp;gt; Search type
     </string>
    <string name="searchDeals">Available deals</string>
    <string name="dealsString">%1$s deals</string>
    <string name="sort">Sort by</string>
    <string name="list.sorted.name">List is sorted by name</string>
    <string name="list.sorted.date">List is sorted by date</string>
    <string name="list.sorted.distance">List is sorted by distance</string>
    <string name="list.sorted.category">List is sorted by deal category popularity</string>
    <string name="list.sorted.rating">List is sorted by rating</string>
    <string name="list.sorted.relevance">List is sorted by relevance</string>
    <string name="list.sortby.name">Sort by name</string>
    <string name="list.sortby.date">Sort by date</string>
    <string name="list.sortby.distance">Sort by distance</string>
    <string name="list.sortby.rating">Sort by rating</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="creation_date">Creation date: %1$s</string>
    <string name="Internet.connection.error">Internet connection error!</string>
    <string name="Authn.error">Authentication error!</string>
    <string name="Authz.error">Authorization error!</string>
    <string name="Http.error">Operation failed with code %1$s!</string>
    <string name="GPS.location.missing.error">I\'m still waiting for your location…</string>
    <string name="Pick.location.failed.error">Failed to find location %1$s due to: %2$s</string>
    <string name="Login.required.error">This function is available only for logged in users! Please go to Menu-&amp;&amp;gt;Login and login to any social network.</string>
    <string name="Checkin.required.error">This function requires Facebook, Foursquare or Twitter login!</string>
    <string name="Checkin.layer.error">Wrong layer for check-in: %1$s</string>
    <string name="Location.send.error">Location upload failed due to %1$s</string>
    <string name="Empty.credentials.error">Login and password can\'t be empty!</string>
    <string name="Comment.empty.error">Comment must be at least 10 character long!</string>
    <string name="SDcard.readmode.error">SD card is only in read mode!</string>
    <string name="SDcard.missing.error">Please insert SD card!</string>
    <string name="Location.checkin.error">No landmarks available. Please refresh layers.</string>
    <string name="Network.connection.error.title">No network connection!</string>
    <string name="Network.connection.error.message">Do you want to check network settings?</string>
    <string name="Location.connection.error.title">No GPS connection!</string>
    <string name="Location.connection.error.message">Do you want to check GPS settings?</string>
    <string name="QRCode.scanner.missing.error">Barcode Scanner is not installed or unavailable!</string>
    <string name="OAuth.authz.url.missing">Missing authorization url. Please try again!</string>
    <string name="OAuth.service.missing">Missing OAuth service. Please try again!</string>
    <string name="Share.no.share.apps">No share apps available!</string>
    <string name="Share.no.matching.apps">Can\'t find matching application!</string>
    <string name="Share.screenshot.exists">Screenshot with this location has already been sent!</string>
    <string name="Call.not.supported.error">Can\'t make a call from your device!</string>
    <string name="Unexpected.error">Oops! Something went wrong. Please try again!</string>
    <string name="Forbidden.connection.error">Connection limit exceeded!</string>
    <string name="Service.unavailable.error">Service temporary unavailable</string>
    <string name="Your.Location">Your location</string>
    <string name="Your.Location.Desc">Location received from %1$s provider with %2$.2f meters accuracy on %3$s.</string>
    <string name="Authn.success">Logon successful!</string>
    <string name="Please.Wait">Please wait…</string>
    <string name="Processing.results">Processing results (%1$d/%2$d)…</string>
    <string name="Last.update">Last update: %1$s</string>
    <string name="Location.sent">Location uploaded</string>
    <string name="Close.app.prompt">Exit Landmark Manager?</string>
    <string name="Searching.dialog.message">Searching for: &amp;lt;br/&amp;&amp;gt;&amp;&amp;lt;b&amp;&amp;gt;%1$s&amp;&amp;lt;/b&amp;&amp;gt;...</string>
    <string name="Searching.dialog.message.plain">Searching for:\n%1$s...</string>
    <string name="Searching.calendar.message">Searching for landmarks on %1$s</string>
    <string name="Oauth.progress.message">Authenticating to &amp;&amp;lt;b&amp;&amp;gt;%1$s&amp;&amp;lt;/b&amp;&amp;gt;...</string>
    <string name="Oauth.progress.message.plain">Authenticating to %1$s...</string>
    <string name="rate.us.message">You\'ve been using our app for %1$d times. Do you want to rate our app?</string>
</resources>