<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mapMode"
          android:title="@string/mapMode" android:icon="@android:drawable/ic_menu_mapmode"/>
    <item android:id="@+id/listMode"
          android:title="@string/listMode" android:icon="@android:drawable/ic_menu_agenda"/>
    <item android:id="@+id/pickMyPos"
          android:title="@string/pickMyPos" android:icon="@android:drawable/ic_menu_mapmode"/>
    <item android:id="@+id/showMyPos"
          android:title="@string/showMyPos" android:icon="@android:drawable/ic_menu_mylocation"/>
    <item android:id="@+id/search"
          android:title="@string/search" android:icon="@drawable/ic_menu_search"/>
    <item android:id="@+id/refreshLayers"
          android:title="@string/refreshLayers" android:icon="@drawable/ic_menu_refresh"/>
    <item android:id="@+id/settings"
          android:title="@string/settings" android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/showMyLandmarks" android:title="@string/showMyLandmarks"/>
    <item android:id="@+id/recentLandmarks" android:title="@string/recentLandmarks"/>
    <item android:id="@+id/showDoD" android:title="@string/titleDod"/>
    <item android:id="@+id/discoverPlaces" android:title="@string/discoverPlaces"/>
    <item android:id="@+id/releaseNotes"
          android:title="@string/releaseNotes" />
    <item android:id="@+id/rateUs"
          android:title="@string/rateUs" />
    <item android:id="@+id/about"
          android:title="@string/about" />
    <item android:id="@+id/exit"
          android:title="@string/exit" />
</menu>

