<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
android:id="@+id/mapCanvasWidgetL"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="#ffffffff"
android:layout_centerInParent="true"
android:visible="false">
        <ImageView
android:id="@+id/mapCanvasLoadingImage"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/discover"
android:layout_centerVertical="true"
android:layout_centerHorizontal="true"/>
    <TextView
android:id="@+id/mapCanvasLoadingText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
style="@style/LoadingText"
android:layout_below="@+id/mapCanvasLoadingImage"
android:text="@string/loadingText"
android:layout_centerVertical="true"
android:layout_centerHorizontal="true"/>
    </RelativeLayout>
<LinearLayout
android:id="@+id/pickLocationForm"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="#FFFFFF"
android:padding="3dip"
>
<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:cacheColorHint="#FFFFFF"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<TextView
android:id="@+id/locationCountryLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/countryLabel"
android:textColor="#000000">
</TextView>
<Spinner
android:id="@+id/locationCountrySpinner"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:drawSelectorOnTop="true"
android:prompt="@string/country_prompt"
>
</Spinner>
<TextView
android:id="@+id/locationAddressLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/addressLabel"
android:textColor="#000000">
</TextView>
<EditText
android:id="@+id/locationAddressText"
android:hint="@string/addressLabel"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:inputType="text|textCapWords"
android:imeOptions="actionSend"
>
</EditText>
<RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
<Button
android:id="@+id/locationCancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cancelButton"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="5dip"
>
</Button>
<Button
android:id="@+id/locationPickButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/pickButton"
android:layout_alignParentTop="true"
android:layout_toLeftOf="@+id/locationCancelButton"
>
</Button>
</RelativeLayout>
<include layout="@layout/adview"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
</merge>