<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="#FFFFFF"
>
    <ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:scrollbars="none"
android:cacheColorHint="#FFFFFF"
>
        <LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:padding="3dip"
>
            <TextView
android:id="@+id/nameLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/nameLabel"
android:textColor="#000000"
>
            </TextView>
            <EditText
android:id="@+id/nameText"
android:hint="@string/nameLabel"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:imeOptions="actionSend"
android:inputType="text|textCapSentences"
>
            </EditText>
            <TextView
android:id="@+id/descLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/descLabel"
android:textColor="#000000"
>
            </TextView>
            <EditText
android:id="@+id/descText"
android:hint="@string/descLabel"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:imeOptions="actionSend"
android:inputType="text|textCapSentences"
>
            </EditText>
            <TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/categoryLabel"
android:textColor="#000000"
>
            </TextView>
            <Spinner
android:id="@+id/categorySpinner"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:drawSelectorOnTop="true"
/>
            <CheckBox
           android:id="@+id/fsAddVenueCheckbox"
           android:text="@string/addVenue"
           android:checked="false"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#000000"/>
            <RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
                <Button
android:id="@+id/cancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cancelButton"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="5dip"
>
                </Button>
                <Button
android:id="@+id/addButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/addButton"
android:layout_alignParentTop="true"
android:layout_toLeftOf="@+id/cancelButton"
>
                </Button>
            </RelativeLayout>
           
            <include layout="@layout/adview"/>
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>