<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="#FFFFFF"
xmlns:android="http://schemas.android.com/apk/res/android"
>
    <ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:cacheColorHint="#FFFFFF"
>
        <LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:padding="3dip"
>
            <TextView
android:id="@+id/nameLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/nameLabel"
android:textColor="#000000">
            </TextView>
            <EditText
android:id="@+id/nameText"
android:hint="@string/nameLabel"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:imeOptions="actionSend"
android:inputType="text|textCapSentences"
>
            </EditText>
            <TextView
android:id="@+id/validityLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/validityLabel"
android:textColor="#000000">
            </TextView>
            <TimePicker
android:id="@+id/timePicker"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
            </TimePicker>
            <TextView
android:id="@+id/descLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/descLabel"
android:textColor="#000000">
            </TextView>
            <EditText
android:id="@+id/descText"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:hint="@string/descLabel"
android:imeOptions="actionSend"
android:inputType="text|textCapSentences"
>
            </EditText>
            <RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
                <Button
android:id="@+id/cancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cancelButton"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="5dip"
>
                </Button>
                <Button
android:id="@+id/sendButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/sendButton"
android:layout_toLeftOf="@+id/cancelButton"
android:layout_alignParentTop="true"
>
                </Button>
           </RelativeLayout>
            <include layout="@layout/adview"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>