<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="#FFFFFF"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:scrollbars="none"
android:cacheColorHint="#FFFFFF"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<TextView
android:id="@+id/loginLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/loginLabel"
android:textColor="#000000">
</TextView>
<EditText
android:id="@+id/loginText"
android:hint="@string/loginLabel"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:imeOptions="actionNext"
android:inputType="text"
>
</EditText>
<TextView
android:id="@+id/passwordLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/passwordLabel"
android:textColor="#000000">
</TextView>
<EditText
android:id="@+id/passwordText"
android:hint="@string/passwordLabel"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:imeOptions="actionSend"
android:inputType="textPassword"
>
</EditText>
<RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
<Button
android:id="@+id/cancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cancelButton"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="5dip"
>
</Button>
<Button
android:id="@+id/loginButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/loginButton"
android:layout_alignParentTop="true"
android:layout_toLeftOf="@+id/cancelButton"
>
</Button>
</RelativeLayout>
<include layout="@layout/adview"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
