<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="#FFFFFF"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:scrollbars="none"
android:cacheColorHint="#FFFFFF"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:padding="3dip"
>
<TextView
android:id="@+id/commentLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/commentLabel"
android:textColor="#000000">
</TextView>
<EditText
android:id="@+id/commentText"
android:hint="@string/commentLabel"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:imeOptions="actionSend"
android:inputType="text|textCapSentences"
>
</EditText>
<RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
<Button
android:id="@+id/cancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cancelButton"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="5dip"
>
</Button>
<Button
android:id="@+id/sendButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/sendButton"
android:layout_alignParentTop="true"
android:layout_toLeftOf="@+id/cancelButton"
>
</Button>
</RelativeLayout>
<include layout="@layout/adview"/>
</LinearLayout>
</ScrollView>
</LinearLayout>

